bug 601487 - add support for cmap subtable format 14 (variation sequences) to OTS sanitizer. r=jdaggett a=blocking2.0